Полностью рабочий код с шифрованием